<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2024 Nauman Khaliq
  ~
  -->

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">


        <TextView
            android:id="@+id/logo"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:textColor="@color/colorAccent"
            android:text="@string/app_name"
            android:textSize="@dimen/heading_size_3"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_6"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawableStart="@drawable/ic_search_24"
                android:drawablePadding="@dimen/margin_16"
                android:enabled="true"
                android:focusable="true"
                android:hint="Search with title or genre"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/small_text_size"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moviesList"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            tools:itemCount="10"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:paddingBottom="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/list_item_movie" />

        <TextView
            android:id="@+id/nothingFoundTV"
            style="@style/NormalTextStyle"
            tools:text="Nothing found 'query'"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>