<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.naumankhaliq.imovies.ui.main.home.MoviesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/moviesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/favouriteMoviesFragment"
        android:name="com.naumankhaliq.imovies.ui.main.favourites.FavouriteMoviesFragment"
        android:label="Favourites"
        tools:layout="@layout/fragment_fav_movies">

        <action
            android:id="@+id/moviesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.naumankhaliq.imovies.ui.main.home.MovieDetailsFragment"
        android:label="Movie Details"
        tools:layout="@layout/fragment_movie_details">
        <argument
            android:name="movie"
            app:argType="com.naumankhaliq.imovies.model.response.movie.Movie"
            app:nullable="false" />

    </fragment>
</navigation>