...
            app:srcCompat="@color/black10"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/ImageView.Corners"/>


        <ImageView
            android:id="@+id/favBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="parent"
...
